<resources>
    <string name="app_name">boardgameplatform</string>
    <string name="start_game">start game</string>
    <string name="human_num">human numbers</string>
    <string name="defender">defender</string>
    <string name="pawn">Pawn</string>
    <string name="mordred">Mordred</string>
    <string name="moganna">Moganna</string>
    <string name="meilin">MeiLin</string>
    <string name="percival">Percival</string>
    <string name="oberon">Oberon</string>
    <string name="assassin">Assassin</string>
    <string name="mission_success">Mission Success</string>
    <string name="mission_fail">Mission Fail</string>
    <string name="choose_case">choose_case</string>
    <string name="start_confirm">start confirm</string>
    <string name="stop_confirm">stop confirm</string>
    <string name="role_num_introduction" formatted="false">%d 个狼人，%d 个村民，1个预言家，1个女巫，1个猎人</string>
    <string name="rolechoose_page_label">选择身份页面</string>
    <string name="role_choose">请选择自己的角色！注意只能选一次！</string>
    <string name="confirm_again">请重新选择！</string>
    <string name="role_comfirm" formatted="false">%d 号玩家，选择身份 %s，确认选择？</string>

    <string name="role_confirm_success">身份确定成功，是否进入下一步？</string>

    <string name="cancel">取消</string>
    <string name="button_comfirm">确定</string>

    <!--预言家操作界面-->
    <string name="seer_page_label">预言家操作页面</string>
    <string name="seer_page_title">预言家 选择要验的玩家</string>
    <string name="seer_comfirm">确认验证 %d号 玩家？</string>
    <string name="seer_page_result" formatted="false"><![CDATA[<font color=\'#FF4081\'>%d号 </font> <font color=\'#000000\'>玩家身份是 </font> <font color=\'#FF4081\'>%s</font>]]></string>

    <!--狼人操作界面-->

    <string name="werewolf_page_label">狼人操作页面</string>
    <string name="_werewolf_page_title">狼人选择要杀的玩家</string>
    <string name="kill_comfirm">确认选择杀 %d号 玩家？</string>
    <string name="kill_nobody">不杀人</string>

    <!--女巫操作界面-->
    <string name="witch_page_label">女巫操作页面</string>
    <string name="help_yes">救</string>
    <string name="help_no">不 救</string>
    <string name="kill_yes">毒</string>
    <string name="kill_no">不 毒</string>

    <string name="help_tile" formatted="false"><![CDATA[<font color=\'#FF4081\'>%1$d号</font>  <font color=\'#000000\'>玩家死了，救不救？</font>]]></string>
    <string name="kill_title">女巫毒不毒？</string>
    <string name="kill_who">毒几号？</string>
    <string name="nobody_kill">昨晚没人死</string>
    <string name="witch_kill_comfirm">确认毒死%d号玩家？</string>

    <!--结果界面-->
    <string name="result_page_label">结果页面</string>
    <string name="result">昨晚%d号玩家死了</string>
    <string name="result_two" formatted="false">昨晚 %d号 和 %d号 玩家死了</string>

    <string name="start_game1">start game</string>
    <string name="human_num1">human numbers</string>
    <string name="werewolf">狼人</string>
    <string name="witch">女巫</string>
    <string name="seer">预言家</string>
    <string name="villager">村民</string>
    <string name="hunter">猎人</string>
    <string name="defender1">守卫</string>
</resources>
