<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Werewolfkill.Activity.Activity.WitchActivity">
    <com.meizu.boardgameplatform.Werewolfkill.Activity.View.CountDownTextView
        android:id="@+id/ll_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </com.meizu.boardgameplatform.Werewolfkill.Activity.View.CountDownTextView>
    <TextView
        android:id="@+id/tv_help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/help_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_help_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClick"
                android:textColor="@color/app_text_new_black"
                android:text="@string/help_yes"
                android:textSize="@dimen/common_text_size"
                android:layout_margin="10dp"
                android:background="@drawable/button_bg_selector"/>

            <Button
                android:id="@+id/bt_help_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClick"
                android:text="@string/help_no"
                android:textColor="@color/app_text_new_black"
                android:textSize="@dimen/common_text_size"
                android:layout_margin="10dp"
                android:background="@drawable/button_bg_selector"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/kill_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:visibility="visible">
        <TextView
            android:id="@+id/tv_kill_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:text="@string/kill_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/bt_kill_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClick"
                android:layout_margin="10dp"
                android:textSize="@dimen/common_text_size"
                android:textColor="@color/app_text_new_black"
                android:background="@drawable/button_bg_selector"
                android:text="@string/kill_yes"/>

            <Button
                android:id="@+id/bt_kill_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="OnClick"
                android:layout_margin="10dp"
                android:textSize="@dimen/common_text_size"
                android:textColor="@color/app_text_new_black"
                android:background="@drawable/button_bg_selector"
                android:text="@string/kill_no"/>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/gridview_layout"
        android:id="@+id/witch_kill_layout"
        android:visibility="gone"/>
    <!--<LinearLayout-->
        <!--android:id="@+id/witch_kill_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:visibility="gone">-->
        <!--<GridView-->
            <!--android:id="@+id/kill_grid"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:scrollbars="none"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:numColumns="auto_fit"-->
            <!--android:columnWidth="90dp"-->
            <!--android:stretchMode="columnWidth"-->
            <!--android:verticalSpacing="10dp"-->
            <!--android:horizontalSpacing="10dp"-->
            <!--/>-->
    <!--</LinearLayout>-->

</LinearLayout>
