<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:background="@color/dialog_bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/app_name"
                android:textColor="@color/app_text_new_black"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/content_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:text="@string/app_name"
                android:textColor="@color/app_text_new_black"
                android:textSize="@dimen/dialog_content_size" />
        </LinearLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/textarea_divider" />

        <TableRow
            android:id="@+id/multi_button"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center">

            <Button
                android:id="@+id/left_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/dialog_bt_selector"
                android:text="@string/cancel"
                android:textColor="@color/app_text_new_black"
                android:textSize="15dp" />

            <!--<View-->
                <!--android:layout_width="1dp"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:background="@color/textarea_divider" />-->

            <Button
                android:id="@+id/right_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/dialog_bt_selector"
                android:text="@string/button_comfirm"
                android:textColor="@color/app_text_new_black"
                android:textSize="15dp" />
        </TableRow>


        <TableRow
            android:id="@+id/one_button"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:visibility="gone">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/dialog_bt_selector"
                android:text="@string/cancel"
                android:textColor="@color/app_text_new_black"
                android:textSize="15dp" />
        </TableRow>

    </LinearLayout>

</LinearLayout>